--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <div class="stats-container">
             <div class="details">
-                <h1>ToDo App</h1>
-                <p>Keep it up</p>
+                <h1>ToDo List</h1>
+                <p>Keep it up!</p>
                 <div id="progressBar">
                     <div id="progress"></div>
                 </div>
@@ -29,5 +29,6 @@
         <ul id="task-list"></ul>
     </div>
     <script src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
 </body>
 </html>
